--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -23,8 +23,8 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
-        <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-        <h1 class="ms-font-su">Welcome</h1>
+        <img width="100" height="100" src="../../assets/schedule-manager-logo.svg" alt="Contoso" title="Contoso" />
+        <h1 class="ms-font-su">Welcome To Class Scheduler</h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
         <h2 class="ms-font-xl">Please <a target="_blank"
@@ -32,26 +32,20 @@
             your add-in to see app body.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today!! </h2>
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">Achieve more with Office integration</span>
+                <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+                    <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
+                    <span class="ms-Button-label">Run Rules</span>
+                </div>
             </li>
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">Unlock features and functionality</span>
-            </li>
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">Create and visualize like a pro</span>
+                <div role="button" id="clear" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+                    <i class="ms-Icon ms-Icon--Broom ms-font-xl"></i>
+                    <span class="ms-Button-label">Clear Rules</span>
+                </div>
             </li>
         </ul>
-        <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Run</span>
-        </div>
-        <p><label id="item-subject"></label></p>
     </main>
 </body>
 
