--- a/addin/src/taskpane/taskpane.html
+++ b/addin/src/taskpane/taskpane.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
-    <header class="ms-welcome__header ms-bgColor-neutralLighter">
+    <header class="ms-welcome__header">
         <img width="100" height="100" src="../../assets/schedule-manager-logo.svg" alt="Contoso" title="Contoso" />
         <h1 class="ms-font-su">Welcome To Class Scheduler</h1>
     </header>
