--- a/addin/src/taskpane/taskpane.html
+++ b/addin/src/taskpane/taskpane.html
@@ -36,13 +36,13 @@
             <li class="ms-ListItem">
                 <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
                     <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                    <span class="ms-Button-label">Run Rules</span>
+                    <span class="ms-Button-label">Check Rules</span>
                 </div>
             </li>
             <li class="ms-ListItem">
                 <div role="button" id="clear" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
                     <i class="ms-Icon ms-Icon--Broom ms-font-xl"></i>
-                    <span class="ms-Button-label">Clear Rules</span>
+                    <span class="ms-Button-label">Clear Rule Warnings</span>
                 </div>
             </li>
         </ul>
