--- a/addin/src/taskpane/taskpane.html
+++ b/addin/src/taskpane/taskpane.html
@@ -1,6 +1,3 @@
-<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
-<!-- This file shows how to design a first-run page that provides a welcome screen to the user about the features of the add-in. -->
-
 <!DOCTYPE html>
 <html>
 
@@ -8,45 +5,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contoso Task Pane Add-in</title>
-
-    <!-- Office JavaScript API -->
+    <title>Class Scheduler</title>
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-
-    <!-- For more information on Fluent UI, visit https://developer.microsoft.com/fluentui#/. -->
     <link rel="stylesheet"
         href="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-core/11.1.0/css/fabric.min.css" />
-
-    <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="ms-font-m ms-welcome ms-Fabric">
-    <header class="ms-welcome__header">
-        <img width="100" height="100" src="../../assets/schedule-manager-logo.svg" alt="Contoso" title="Contoso" />
-        <h1 class="ms-font-su">Welcome To Class Scheduler</h1>
-    </header>
-    <section id="sideload-msg" class="ms-welcome__main">
-        <h2 class="ms-font-xl">Please <a target="_blank"
-                href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a>
-            your add-in to see app body.</h2>
-    </section>
-    <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <ul class="ms-List ms-welcome__features">
-            <li class="ms-ListItem">
+<body class="ms-font-m ms-Fabric">
+    <div style="display: flex; flex-direction: column; height: 100vh;">
+        <header  style="padding: 10px; display: flex; align-items: center; justify-content: flex-start;">
+            <img width="55" height="55" src="../../assets/schedule-manager-logo.svg" alt="Class Scheduler" title="Class Scheduler" />
+            <h1 class="ms-font-xl" style="margin: 0 0 0 10px; font-size: 25px;">Class Scheduler</h1>
+        </header>
+
+        <section id="sideload-msg" class="ms-welcome__main">
+            <p class="ms-font-m">Please <a target="_blank"
+                    href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a>
+                your add-in to see app body.</p>
+        </section>
+
+        <main id="app-body" class="ms-welcome__main" style="display: none;">
+            <div class="ms-ListItem">
                 <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
                     <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
                     <span class="ms-Button-label">Check Rules</span>
                 </div>
-            </li>
-            <li class="ms-ListItem">
+            </div>
+            <div class="ms-ListItem">
                 <div role="button" id="clear" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
                     <i class="ms-Icon ms-Icon--Broom ms-font-xl"></i>
                     <span class="ms-Button-label">Clear Rule Warnings</span>
                 </div>
-            </li>
-        </ul>
-    </main>
+            </div>
+        </main>
+
+        <footer class="ms-welcome__footer" style="margin-top: auto; padding: 10px; text-align: right;">
+            <span class="ms-font-xs" id="version">
+                v0.2.0
+            </span>
+        </footer>
+    </div>
 </body>
 
 </html>
