some basic optimization

--- a/addin/src/taskpane/taskpane.html
+++ b/addin/src/taskpane/taskpane.html
@@ -38,7 +38,7 @@
                         </label>
                     </div>
                 </div>
-                <p class="ms-font-s toggle-description">When enabled, rules will be checked automatically when data changes in Rules or Schedule sheets.</p>
+                <p class="ms-font-s toggle-description">When enabled, rules will be checked automatically when data changes in Rules or Schedule sheets. You can close this taskpane after enabling this. You will have to enable it each time you open the Workbook.</p>
             </div>
         </main>
 
